--- a/src/components/RegistrationComponent.css
+++ b/src/components/RegistrationComponent.css
@@ -89,3 +89,7 @@
 .login-modal-button:active {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(104.34deg, #41522E -15.34%, #BE8022 145.95%);
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
