--- a/src/components/HotelViewComponent.css
+++ b/src/components/HotelViewComponent.css
@@ -13,6 +13,7 @@
 }
 
 .hotel-icon {
+    position: relative;
     width: 64px;
     height: 64px;
     border-radius: 50%;
@@ -53,4 +54,20 @@
 
 .like.active {
     color: red;
+}
+
+img.house {
+    position: absolute;
+    left: 28%;
+    right: -0.01%;
+    top: 28.82%;
+    bottom: -5.6%;
+}
+
+img.roof {
+    position: absolute;
+    left: 19.25%;
+    right: -0.01%;
+    top: 18.82%;
+    bottom: -5.6%;
 }
